# sofi-super-blog

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  build.sh  create_transactions.py  docker-compose.yml  env.sample  pyproject.toml  requirements.txt  strip_setuptools.py
.github/workflows/: github-actions-python.yml
blog/: README.md  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20220909_0000.py  0003_alter_post_text.py
blog/static/css/: blog.css
blog/templates/blog/: 404.html  about.html  base.html  index.html  post_author_column.html  post_detail.html  post_edit.html  post_list.html  tag_list.html
finance/: README.md  admin.py  models.py  serializers.py  tests.py  urls.py  views.py
finance/commands/: import_csv.py
finance/management/commands/: importcsv.py
finance/migrations/: 0001_initial.py  0002_currency_alter_transaction_options.py  0003_transaction_currency.py  0004_financialgoals.py
finance/templates/admin/: statistics.html
finance/tests/: test_funtional.py  test_integration.py  test_models.py  test_serializer.py  test_view.py  test_views.py
finance/utils/: charts.py  charts_func.py
mysite/: admin.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
scripts/: create_transactions.py  session_auth.py
