[tool.poetry]
name = "mysite"
version = "0.1.0"
description = "Sofi Blog"
authors = ["Sofia Enriquez <lsofia.enriquez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.3"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"
setuptools = "^65.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
